change fullhd size and gap variable from bulma & fix line height in body sizes style

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -39,7 +39,7 @@ $body-font-sizes: (
 
 @mixin body-typography($body-name, $body-font-size) {
   .body#{$body-name} {
-    line-height: 1.3;
+    line-height: $body-font-size * 1.6;
     font-size: $body-font-size;
   }
 }
